--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-.weather {
-  border: 2px solid #dadde1;
+.App {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+footer {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  margin-top: 0px;
 }
