--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,8 +1,52 @@
 .Weather {
-  border: 1px solid #dadde1;
+  border: 1px solid #70757a;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px auto 0;
+  padding: 20px;
+  border-radius: 4px;
+  color: #70757a;
+}
+
+.Weather form {
+  padding: 0;
+}
+
+.Weather h1 {
+  font-size: 26px;
+  padding: 0;
+  margin: 20px 0 0 0;
+  font-weight: normal;
+}
+.Weather ul {
+  padding: 0;
+  margin: 0;
+}
+.Weather img {
+  height: 64px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 10px 0 0;
+}
+.Weather li {
+  list-style-type: none;
+  font-size: 16px;
+}
+.Weather .results {
   margin-top: 10px;
 }
 
-form {
-  margin-top: 10px;
+.Weather .temperature {
+  font-size: 64px;
+  color: #202125;
+  line-height: 64px;
+  font-weight: 400;
+}
+
+.Weather .unit {
+  color: #202125;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 5px;
+  vertical-align: top;
 }
