Changed img to animated external component

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,7 +21,7 @@
   padding: 0;
   margin: 0;
 }
-.Weather img {
+.Weather canvas {
   height: 64px;
   display: inline-block;
   vertical-align: top;
