--- a/src/Weather.css
+++ b/src/Weather.css
@@ -22,10 +22,9 @@
   margin: 0;
 }
 .Weather canvas {
-  height: 64px;
   display: inline-block;
   vertical-align: top;
-  margin: 0 10px 0 0;
+  margin: 0;
 }
 .Weather li {
   list-style-type: none;
@@ -40,6 +39,7 @@
   color: #202125;
   line-height: 64px;
   font-weight: 400;
+  margin-left: 10px;
 }
 
 .Weather .unit {
